fix chat scrollbar

--- a/app/frontend/static/styles.css
+++ b/app/frontend/static/styles.css
@@ -15,6 +15,10 @@ body {
   flex-direction: column;
 }
 
+body.no-scroll {
+  overflow: hidden;
+}
+
 a:hover {
   color: #dddddd;
 }
